project/test/semantics/unit/bad/Bad24_shouldCheckTypesInUnaryOperators.ty
mutable class SomeMutableClass {

    values: {
        total: Int;
        count: Int;
        name: String = "Some name";
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
    }
    
    functions: {
        goodFunction: () -> Int = 50
    }
    
    actions: {
        goodAction: (x: Int, y: String) -> Int = {
            val z: Int = 4;
            z
        }
        
        badAction: (arg1: Bool, arg2: String, arg3: String) -> Int = {
            val local1: Int = 8 * 2 + (-8) / 2 + 4;
            val local2: Bool = not False;
            val local3: Int = 8 * local1 + 9 * (-local2) - 7; 
            // UnexpectedTypeError: local2: Bool instead of Int
            local1
        }
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = Pass
    }
}
